--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
       <a href="./html files/about.html" target="_blank">About</a>
       <a href="./html files/course.html" target="_blank">Courses</a>
       <a href="./html files/docs.html" target="_blank">Docs</a>
-      <button onclick="location.href='../html files/signin.html'" class="btn-main">Sign In</button>
+      <button onclick="location.href='./html files/signin.html'" class="btn-main">Sign In</button>
     </nav>
   </div>
 </header>
