--- a/index.html
+++ b/index.html
@@ -60,7 +60,7 @@
     </div>
 
     <!-- Card 2 -->
-    <div class="card image-card">0
+    <div class="card image-card">
       <img src="./pictures/card 2.png" alt="Certification Guide" />
       <h4>Data Science & AI</h4>
       <h5>Uses algorithms and data to build intelligent systems that learn, predict outcomes, and solve complex real-world problems.</h5>
